Fix several SonarLint issues.